# GUT_Manycore_Architectures_MCTS

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists-legacy.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  prepare-all.sh
distributed-implementation/: Readme.md  build-gut.sh  prepare-env-gut.sh  prepare-env.sh
distributed-implementation/legacy-first-attempt/: MctsNode.h  MctsNodeDeserializer.cpp  MctsNodeDeserializer.h  MctsNodeSerializer.cpp  NimGameState.h  main.cpp
distributed-implementation/preparations/: MctsNode.cpp  MctsNode.h  MctsNodeDeserializer.cpp  MctsNodeSerializer.cpp  MctsNodeSerializer.h  MctsTreeMerger.cpp  MctsTreeMerger.h  NimGameState.cpp  UctSortMcts.cpp  UtcSortMcts.h  hellocpp.cpp  hellocpp.h  main.cpp
distributed-implementation/source/: MctsCommon.h  MctsMain.cpp
distributed-implementation/source/games/: ChessGameMechanics.cpp  ChessGameMechanics.h  ChessGameState.cpp  ChessGameState.h  IGameState.h  NimGameState.cpp  NimGameState.h
distributed-implementation/source/parsers/: ChessGameParser.cpp  ChessGameParser.h
distributed-implementation/source/playouts/: WithUctSort.cpp  WithUctSort.h
distributed-implementation/source/tree/: Deserializer.cpp  Deserializer.h  Merger.cpp  Merger.h  Node.cpp  Node.h  Serializer.cpp  Serializer.h
distributed-implementation/source/utils/: ChessBoardRepresentations.cpp  ChessBoardRepresentations.h
serial-implementation/: Readme.md  run-tests.sh
serial-implementation/source/: setup.py
serial-implementation/source/guterialmcts/: mcts_test.py
serial-implementation/source/gutserialmcts/: mcts_test.py
serial-implementation/source/gutserialmcts/algorithm/: mcts.py  utc.py
serial-implementation/source/gutserialmcts/games/: base.py  nim.py
serial-implementation/tests/: mcts_test_test.py
